# routes/api.php
@@ -1,8 +1,8 @@
 <?php
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
-
 
 Route::get('/', function () {
     return view('swagger-ui');
@@ -15,5 +15,10 @@ Route::group(['prefix' => '/auth'], function () {
     Route::middleware('auth:sanctum')->group(function () {
         Route::get('/me', [AuthController::class, 'me']);
     });
+});
+
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::resource('users', UserController::class)->except(['edit']);
 });
 
